# streamdiff

./: README.md  setup.cfg
docs/: annotation.md  audit.md  blender.md  caster.md  changelog.md  composer.md  delimiter.md  differ.md  embedder.md  filtering.md  flattener.md  freezer.md  grouping.md  indexer.md  labeler.md  migration.md  partitioner.md  pinpointer.md  planner.md  policy.md  profiler.md  pruner.md  redactor.md  resolver.md  scorer2.md  snapshots.md  splitter.md  stretcher.md  type_compatibility.md  watchdog.md
streamdiff/: aliaser.py  amplifier.py  annotator.py  auditor.py  baseline.py  batcher.py  blender.py  canonicalizer.py  capper.py  caster.py  changelog.py  classifier.py  cli.py  cli_alias.py  cli_annotate.py  cli_audit.py  cli_baseline.py  cli_changelog.py  cli_clone.py  cli_coverage.py  cli_crop.py  cli_delimit.py  cli_differ.py  cli_digest.py  cli_embed.py  cli_export.py  cli_extract.py  cli_filter.py  cli_flatten.py  cli_freeze.py  cli_graph.py  cli_group.py  cli_index.py  cli_label.py  cli_link.py  cli_mask.py  cli_match.py  cli_merge.py  cli_partition.py  cli_pin.py  (+111 more)
tests/: test_aliaser.py  test_amplifier.py  test_annotator.py  test_auditor.py  test_baseline.py  test_batcher.py  test_blender.py  test_canonicalizer.py  test_capper.py  test_caster.py  test_changelog.py  test_classifier.py  test_cli.py  test_cli_alias.py  test_cli_annotate.py  test_cli_audit.py  test_cli_delimit.py  test_cli_differ.py  test_cli_embed.py  test_cli_filter.py  test_cli_flatten.py  test_cli_freeze.py  test_cli_group.py  test_cli_index.py  test_cli_label.py  (+102 more)
