[metadata]
name = streamdiff
version = 0.1.0
description = CLI tool to diff and validate schema changes in Kafka and Kinesis streams
long_description = file: README.md
long_description_content_type = text/markdown
author = streamdiff contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    streamdiff = streamdiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
